src/test/deca/demo/error/identifier_not_declared.deca
// Programme dans lequel on utilise une variable non déclarée
{
    // Utilisation de la variable i qui n'est pas déclarée
    while(i <= 10) {
        i = i + 1;
        println(i);
    }
}
